changing id on properties on panel

--- a/src/views/clinic-panel/pages/panel/properties-and-services.ejs
+++ b/src/views/clinic-panel/pages/panel/properties-and-services.ejs
@@ -84,66 +84,66 @@
                   <!-- ! '_' li ifade input alanındaki id ve name alanlarına eklenecek(inputlara name alanı eklenecek) -->
                   <!-- ! '_' li ifade label lardaki for lara eklenecek.. -->
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Otopark Hizmeti </label>
+                    <input class="form-check-input" type="checkbox" value="" id="park_services" />
+                    <label class="form-check-label" for="park_services"> Otopark Hizmeti </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Ambulans Hizmeti </label>
+                    <input class="form-check-input" type="checkbox" value="" id="ambulance_services" />
+                    <label class="form-check-label" for="ambulance_services"> Ambulans Hizmeti </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> 7/24 Ulaşılabilirlik </label>
+                    <input class="form-check-input" type="checkbox" value="" id="services" />
+                    <label class="form-check-label" for="services"> 7/24 Ulaşılabilirlik </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> İzole Oda </label>
+                    <input class="form-check-input" type="checkbox" value="" id="room_services" />
+                    <label class="form-check-label" for="room_services"> İzole Oda </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> El Kumandalı Otomatik Yatak </label>
+                    <input class="form-check-input" type="checkbox" value="" id="otomatic_bad" />
+                    <label class="form-check-label" for="otomatic_bad"> El Kumandalı Otomatik Yatak </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Sedyeli Hasta Servisi </label>
+                    <input class="form-check-input" type="checkbox" value="" id="patient_services" />
+                    <label class="form-check-label" for="patient_services"> Sedyeli Hasta Servisi </label>
                   </div>
                 </div>
                 <div class="form-box mt-4">
                   <div class="title">Merkez Binası Tipi</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                    <label class="form-check-label selected" for="flexCheckChecked"> Müstakil Binalı Merkez </label>
+                    <input class="form-check-input" type="checkbox" value="" id="private_center" checked />
+                    <label class="form-check-label selected" for="private_center"> Müstakil Binalı Merkez </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Müstakil Binada Olmayan Merkez </label>
+                    <input class="form-check-input" type="checkbox" value="" id="notprivate_center" />
+                    <label class="form-check-label" for="notprivate_center"> Müstakil Binada Olmayan Merkez </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Hastane İçi Merkez </label>
+                    <input class="form-check-input" type="checkbox" value="" id="hospital_center" />
+                    <label class="form-check-label" for="hospital_center"> Hastane İçi Merkez </label>
                   </div>
                 </div>
                 <div class="form-box">
                   <div class="title mt-4">Konuşulan Diller (Personel)</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                    <label class="form-check-label selected" for="flexCheckChecked"> Türkçe </label>
+                    <input class="form-check-input" type="checkbox" value="" id="language_tr" checked />
+                    <label class="form-check-label selected" for="language_tr"> Türkçe </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> İngilizce </label>
+                    <input class="form-check-input" type="checkbox" value="" id="language_en" />
+                    <label class="form-check-label" for="language_en"> İngilizce </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Rusça </label>
+                    <input class="form-check-input" type="checkbox" value="" id="language_rs" />
+                    <label class="form-check-label" for="language_rs"> Rusça </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Arapça </label>
+                    <input class="form-check-input" type="checkbox" value="" id="language_ar" />
+                    <label class="form-check-label" for="language_ar"> Arapça </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> İspanyolca </label>
+                    <input class="form-check-input" type="checkbox" value="" id="language_sp" />
+                    <label class="form-check-label" for="language_sp"> İspanyolca </label>
                   </div>
                   <div class="tm-margin-t-1">
                     <a href="#">Farklı bir dil eklemek için tıklayın</a>
@@ -154,99 +154,99 @@
                 <div class="form-box">
                   <div class="title mt-4">Diyaliz Merkezleri</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                    <label class="form-check-label selected" for="flexCheckChecked"> Özel Diyaliz Merkezi </label>
+                    <input class="form-check-input" type="checkbox" value="" id="private_private" checked />
+                    <label class="form-check-label selected" for="private_private"> Özel Diyaliz Merkezi </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Kamu Diyaliz Merkezi </label>
+                    <input class="form-check-input" type="checkbox" value="" id="private_public" />
+                    <label class="form-check-label" for="private_public"> Kamu Diyaliz Merkezi </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Üniversite Diyaliz Merkezi </label>
+                    <input class="form-check-input" type="checkbox" value="" id="private_universty" />
+                    <label class="form-check-label" for="private_universty"> Üniversite Diyaliz Merkezi </label>
                   </div>
                 </div>
                 <div class="form-box">
                   <div class="title mt-4">Sigorta Durumu</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                    <label class="form-check-label selected" for="flexCheckChecked"> SSK Anlaşmalı </label>
+                    <input class="form-check-input" type="checkbox" value="" id="sgk_agreement" checked />
+                    <label class="form-check-label selected" for="sgk_agreement"> SSK Anlaşmalı </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Banka Anlaşmalı </label>
+                    <input class="form-check-input" type="checkbox" value="" id="bank_agreement" />
+                    <label class="form-check-label" for="bank_agreement"> Banka Anlaşmalı </label>
                   </div>
                 </div>
                 <div class="form-box">
                   <div class="title mt-4">Personel Durumu</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                    <label class="form-check-label selected" for="flexCheckChecked"> Diyetisyen </label>
+                    <input class="form-check-input" type="checkbox" value="" id="dietitian" checked />
+                    <label class="form-check-label selected" for="dietitian"> Diyetisyen </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Nefrlolog </label>
+                    <input class="form-check-input" type="checkbox" value="" id="nefrlog" />
+                    <label class="form-check-label" for="nefrlog"> Nefrlolog </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Profesörlü </label>
+                    <input class="form-check-input" type="checkbox" value="" id="prof" />
+                    <label class="form-check-label" for="prof"> Profesörlü </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Uzman Hekimli </label>
+                    <input class="form-check-input" type="checkbox" value="" id="doctor" />
+                    <label class="form-check-label" for="doctor"> Uzman Hekimli </label>
                   </div>
                 </div>
                 <div class="form-box">
                   <div class="title mt-4">Diyaliz Cihazı Markaları</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                    <label class="form-check-label selected" for="flexCheckChecked"> Fresenius </label>
+                    <input class="form-check-input" type="checkbox" value="" id="Fresenius" checked />
+                    <label class="form-check-label selected" for="Fresenius"> Fresenius </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> BBraun Dialog+ </label>
+                    <input class="form-check-input" type="checkbox" value="" id="BBraun" />
+                    <label class="form-check-label" for="BBraun"> BBraun Dialog+ </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Gambro </label>
+                    <input class="form-check-input" type="checkbox" value="" id="Gambro" />
+                    <label class="form-check-label" for="Gambro"> Gambro </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Nipro Surdial </label>
+                    <input class="form-check-input" type="checkbox" value="" id="Nipro" />
+                    <label class="form-check-label" for="Nipro"> Nipro Surdial </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                    <label class="form-check-label selected" for="flexCheckChecked"> Kawasumi </label>
+                    <input class="form-check-input" type="checkbox" value="" id="Kawasumi" checked />
+                    <label class="form-check-label selected" for="Kawasumi"> Kawasumi </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Toray </label>
+                    <input class="form-check-input" type="checkbox" value="" id="Toray" />
+                    <label class="form-check-label" for="Toray"> Toray </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Baxter </label>
+                    <input class="form-check-input" type="checkbox" value="" id="Baxter" />
+                    <label class="form-check-label" for="Baxter"> Baxter </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Nikkiso </label>
+                    <input class="form-check-input" type="checkbox" value="" id="Nikkiso" />
+                    <label class="form-check-label" for="Nikkiso"> Nikkiso </label>
                   </div>
                 </div>
                 <div class="form-box">
                   <div class="title mt-4">Tercüman Hizmeti</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                    <label class="form-check-label selected" for="flexCheckChecked"> Ücretli </label>
+                    <input class="form-check-input" type="radio" value="" id="paid" checked />
+                    <label class="form-check-label selected" for="paid"> Ücretli </label>
                   </div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                    <label class="form-check-label" for="flexCheckChecked"> Ücretsiz </label>
+                    <input class="form-check-input" type="radio" value="" id="free" />
+                    <label class="form-check-label" for="free"> Ücretsiz </label>
                   </div>
                 </div>
                 <div class="form-box">
                   <div class="title mt-4">Ek Hizmetler</div>
                   <div class="form-group not-border checkbox">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                    <label class="form-check-label selected" for="flexCheckChecked"> Ücretsiz Havaalanı Transferi </label>
+                    <input class="form-check-input" type="checkbox" value="" id="free_airport" checked />
+                    <label class="form-check-label selected" for="free_airport"> Ücretsiz Havaalanı Transferi </label>
                   </div>
                   <div class="form-group">
                     <label for="others" class="custom">Diğer (Açıklayınız)</label>
