changing visibilty button

--- a/src/views/clinic-panel/pages/panel/visibility.ejs
+++ b/src/views/clinic-panel/pages/panel/visibility.ejs
@@ -53,32 +53,32 @@
                   <div class="dropdown-menu p-2" aria-labelledby="dropdownMenuButton">
                     <form>    
                     <div class="dropdown-item form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                      <label class="form-check-label" for="defaultCheck1">Kuzey Avrupa Bölgesi</label>
+                      <input class="form-check-input" type="checkbox" value="" id="European_Region">
+                      <label class="form-check-label" for="European_Region">Kuzey Avrupa Bölgesi</label>
                     </div>               
                       <div class="dropdown-item form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                        <label class="form-check-label" for="defaultCheck1">Güney ve Doğu Avrupa Bölgeleri</label>
+                        <input class="form-check-input" type="checkbox" value="" id="europen_region_n">
+                        <label class="form-check-label" for="europen_region_n">Güney ve Doğu Avrupa Bölgeleri</label>
                       </div>
                       <div class="dropdown-item form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                        <label class="form-check-label" for="defaultCheck1">Kuzey Afrika Bölgesi</label>
+                        <input class="form-check-input" type="checkbox" value="" id="africa_n">
+                        <label class="form-check-label" for="africa_n">Kuzey Afrika Bölgesi</label>
                       </div>
                       <div class="dropdown-item form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                        <label class="form-check-label" for="defaultCheck1">Orta ve Güney Afrika Bölgesi</label>
+                        <input class="form-check-input" type="checkbox" value="" id="africa">
+                        <label class="form-check-label" for="africa">Orta ve Güney Afrika Bölgesi</label>
                       </div>
                       <div class="dropdown-item form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                        <label class="form-check-label" for="defaultCheck1">Yakın Coğrafya Bölgesi</label>
+                        <input class="form-check-input" type="checkbox" value="" id="geograpy">
+                        <label class="form-check-label" for="geograpy">Yakın Coğrafya Bölgesi</label>
                       </div>
                       <div class="dropdown-item form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                        <label class="form-check-label" for="defaultCheck1">Kuzey Amerika Bölgesi</label>
+                        <input class="form-check-input" type="checkbox" value="" id="america">
+                        <label class="form-check-label" for="america">Kuzey Amerika Bölgesi</label>
                       </div>
                       <div class="dropdown-item form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                        <label class="form-check-label" for="defaultCheck1">Güney Amerika Bölgesi</label>
+                        <input class="form-check-input" type="checkbox" value="" id="america_n">
+                        <label class="form-check-label" for="america_n">Güney Amerika Bölgesi</label>
                       </div> 
                     </form>
                   </div>
@@ -86,7 +86,7 @@
 
               </div>
               <div class="col">
-                <label class="custom container unselected">Bulunduğun İl
+                <label class="custom container">Bulunduğun İl
                   <input type="radio" name="radio" />
                   <span class="checkmark"></span>
                   <div class="tooltip-custom">
@@ -97,7 +97,7 @@
                 </label>
               </div>
               <div class="col">
-                <label class="custom container unselected">Bulunduğun İlçe
+                <label class="custom container">Bulunduğun İlçe
                   <input type="radio" name="radio" />
                   <span class="checkmark"></span>
                   <div class="tooltip-custom">
@@ -108,7 +108,7 @@
                 </label>
               </div>
               <div class="col">
-                <label class="custom container unselected">Anasayfa Önerilen Merkezler
+                <label class="custom container">Anasayfa Önerilen Merkezler
                   <input type="radio" name="radio" />
                   <span class="checkmark"></span>
                   <div class="tooltip-custom">
