--- a/src/views/clinic-panel/pages/panel/calender.ejs
+++ b/src/views/clinic-panel/pages/panel/calender.ejs
@@ -11,7 +11,7 @@
               <option value="2">Akşam Seansı</option>
               <option value="2">Gece Seansı</option>
             </select>
-            <img src="../clinic-panel/images/icons/down-big.png" alt="Down Big Icon" class="dropdown-down big-icon" />
+            <!-- <img src="../clinic-panel/images/icons/down-big.png" alt="Down Big Icon" class="dropdown-down big-icon mb-0 mt-0" /> -->
           </div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
@@ -112,6 +112,45 @@
 
         <div class="tm-section-title blue calendar-title calendar-wrapper">Takvim</div>
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+
+          <div class="wrapper">
+
+            <div class="container-calendar">
+                <h3 id="monthAndYear"></h3>
+                
+                <div class="button-container-calendar">
+                    <button id="previous" onclick="previous()">&#8249;</button>
+                    <button id="next" onclick="next()">&#8250;</button>
+                </div>
+                
+                <table class="table-calendar" id="calendar" data-lang="en">
+                    <thead id="thead-month"></thead>
+                    <tbody id="calendar-body"></tbody>
+                </table>
+                
+                <div class="footer-container-calendar">
+                     <label for="month">Jump To: </label>
+                     <select id="month" onchange="jump()">
+                         <option value=0>Jan</option>
+                         <option value=1>Feb</option>
+                         <option value=2>Mar</option>
+                         <option value=3>Apr</option>
+                         <option value=4>May</option>
+                         <option value=5>Jun</option>
+                         <option value=6>Jul</option>
+                         <option value=7>Aug</option>
+                         <option value=8>Sep</option>
+                         <option value=9>Oct</option>
+                         <option value=10>Nov</option>
+                         <option value=11>Dec</option>
+                     </select>
+                     <select id="year" onchange="jump()"></select>       
+                </div>
+        
+            </div>
+            
+        </div>
+
           <div class="wrapper">
           </div>
           <!-- <div class="tm-section-title blue calendar-title calendar-wrapper">Takvim</div>
@@ -127,9 +166,13 @@
               <button class="btn-second next" onclick="nextMonth()">Sonraki Ay</button>
             </div> -->
             
-            <div class="calendar ">
+            <!-- <div class="calendar"> -->
               <div class="row">
-                <div class="col no-padding">
+              
+                
+
+
+                <!-- <div class="col no-padding">
                   <div class="col">
                     <div class="calendar-day"></div>
                     <div class="seans-box">
@@ -232,7 +275,7 @@
                     <hr class="calendar-hr" />
                     <div class="calendar-others-time">1</div>
                   </div>
-                </div>
+                </div> -->
               </div>
               <!-- <div class="row">
                 <div class="col">
@@ -614,7 +657,7 @@
                   </div>
                 </div> -->
               <!-- </div> -->
-            </div>
+            <!-- </div> -->
           </div>
         </div>
       </div>
