--- a/src/views/clinic-panel/pages/panel/index.ejs
+++ b/src/views/clinic-panel/pages/panel/index.ejs
@@ -184,8 +184,8 @@
               <div class="row align-items-start">
                 <div class="col">
                   <div class="d-flex justify-content-center date m-0 p-0">
-                  <div class="mt-1" id="year">
-                    <script>document.write(new Date().getFullYear());</script>
+                  <div class="mt-1">
+                    2020
                   </div>
                 </div>
                   <div class="month">
