lised user edit

--- a/src/views/admin/partials/aside.ejs
+++ b/src/views/admin/partials/aside.ejs
@@ -77,7 +77,7 @@
         <span class="side-menu__label">Kullanıcı</span><i class="angle fa fa-angle-right"></i></a>
       <ul class="slide-menu">
         <li><a href="/admin/datatable" class="slide-item">Kullanıcıları Listele</a></li>
-        <li><a href="/admin/datatable" class="slide-item">Kullanıcıları Düzenleme</a></li>
+        <li><a href="/admin/user-edit" class="slide-item">Kullanıcıları Düzenleme</a></li>
       </ul>
     </li>
     <!--====== Location-Map VİEW BAR ======-->
