added seo management seo router

--- a/src/views/admin/partials/aside.ejs
+++ b/src/views/admin/partials/aside.ejs
@@ -143,9 +143,9 @@
         </svg>
         <span class="side-menu__label">SEO Yönetimi</span><i class="angle fa fa-angle-right"></i></a>
       <ul class="slide-menu">
-        <li><a href="#" class="slide-item">Anasayfa Yönetimi</a></li>
-        <li><a href="#" class="slide-item">Klinik Anasayfa Yönetimi</a></li>
-        <li><a href="#" class="slide-item">Klinik Yönetimi</a></li>
+        <li><a href="/admin/home-management" class="slide-item">Anasayfa Yönetimi</a></li>
+        <li><a href="/admin/clinic-home-management" class="slide-item">Klinik Anasayfa Yönetimi</a></li>
+        <li><a href="/admin/clinic-management" class="slide-item">Klinik Yönetimi</a></li>
       </ul>
     </li>
     <!--====== Language BAR ======-->
