--- a/src/views/admin/pages/datatable.ejs
+++ b/src/views/admin/pages/datatable.ejs
@@ -1,22 +1,7 @@
 <!--Page header-->
 <div class="page-header">
   <div class="page-leftheader">
-    <h4 class="page-title">Data Tables</h4>
-  </div>
-  <div class="page-rightheader ml-auto d-lg-flex d-none">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item">
-        <a href="#" class="d-flex"
-          ><svg class="svg-icon" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
-            <path d="M0 0h24v24H0V0z" fill="none" />
-            <path d="M12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3zm5 15h-2v-6H9v6H7v-7.81l5-4.5 5 4.5V18z" />
-            <path d="M7 10.19V18h2v-6h6v6h2v-7.81l-5-4.5z" opacity=".3" /></svg
-          ><span class="breadcrumb-icon"> Home</span></a
-        >
-      </li>
-      <li class="breadcrumb-item"><a href="#">Tables</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Data Tables</li>
-    </ol>
+    <h4 class="page-title">Kullanıcılar</h4>
   </div>
 </div>
 <!--End Page header-->
@@ -26,7 +11,7 @@
   <div class="col-12">
     <div class="card">
       <div class="card-header">
-        <div class="card-title">Basic DataTable</div>
+        <div class="card-title">Kullanıcılar Listesi</div>
       </div>
       <div class="card-body">
         <div class="table-responsive">
