added kasa finans routers

--- a/src/views/admin/partials/aside.ejs
+++ b/src/views/admin/partials/aside.ejs
@@ -59,8 +59,6 @@
       <ul class="slide-menu">
         <li><a href="/admin/blogs" class="slide-item">Blog Yazılarını Görüntüle</a></li>
         <li><a href="/admin/add-blog" class="slide-item">Blog Yazısı Ekle</a></li>
-        <!-- <li><a href="admin/delete-blog" class="slide-item">Blog Yazısını Sil</a></li>
-        <li><a href="#" class="slide-item">Blog Yazısı Güncelle</a></li> -->
       </ul>
     </li>
     
@@ -94,7 +92,6 @@
       <ul class="slide-menu">
         <li><a href="#" class="slide-item">Konum ve Yakındaki Yerler Listesi</a></li>
         <li><a href="#" class="slide-item">Ulaşım Türü Altenatifleri</a></li>
-        <!-- <li><a href="#" class="slide-item">Adres Koordinatları Kopyalama</a></li> -->
       </ul>
     </li>
     <!--====== Center VİEW BAR ======-->
@@ -113,7 +110,7 @@
         <li><a href="/admin/premium-center" class="slide-item">Premium Üye Ekleme</a></li>
       </ul>
     </li>
-    <!--====== Kasa-FinansManagement BAR ======-->
+    <!--====== Kasa Management BAR ======-->
     <li class="slide">
       <a class="side-menu__item" data-toggle="slide" href="#">
         <svg class="side-menu__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -125,10 +122,10 @@
         </svg>
         <span class="side-menu__label">Kasa Yönetimi</span><i class="angle fa fa-angle-right"></i></a>
       <ul class="slide-menu">
-        <li><a href="#" class="slide-item">Borçlular Hesabı</a></li>
-        <li><a href="#" class="slide-item">Yapılmış Ödemeler</a></li>
-        <li><a href="#" class="slide-item">Merkez Harcamaları</a></li>
-        <li><a href="#" class="slide-item">Token Takibi</a></li>
+        <li><a href="/admin/debtor-account" class="slide-item">Borçlular Hesabı</a></li>
+        <li><a href="/admin/charged" class="slide-item">Yapılmış Ödemeler</a></li>
+        <li><a href="/admin/center-spend" class="slide-item">Merkez Harcamaları</a></li>
+        <li><a href="/admin/token-tracking" class="slide-item">Token Takibi</a></li>
       </ul>
     </li>
     <!--====== SEO Management BAR ======-->
