--- a/src/views/user/pages/clinic/all-view.ejs
+++ b/src/views/user/pages/clinic/all-view.ejs
@@ -18,7 +18,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="countryOne">
             <button type="button" data-bs-toggle="collapse" data-bs-target="#<%-country._id.country %>" aria-expanded="false" aria-controls="<%-country._id.country %>">
-              <img src="../user/img/flags/turkey.png" width="35" height="25" alt="Flag Turkey" class="mb-1" /> <%- country._id.country %> 
+               <%- country._id.country %> 
               <span class="mx-3"> <%- country._id.count %> Diyaliz Merkezi</span> <i class="bi bi-chevron-down"></i></button></h2>
           <div id="<%-country._id.country %>" class="accordion-collapse collapse show" aria-labelledby="countryOne" data-bs-parent="#country">
             <div class="accordion-body">
