--- a/src/views/clinic-panel/pages/panel/calender.ejs
+++ b/src/views/clinic-panel/pages/panel/calender.ejs
@@ -113,7 +113,7 @@
         <div class="tm-section-title blue calendar-title calendar-wrapper">Takvim</div>
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
 
-          <div class="wrapper">
+          <!-- <div class="wrapper">
 
             <div class="container-calendar">
                 <h3 id="monthAndYear"></h3>
@@ -149,7 +149,7 @@
         
             </div>
             
-        </div>
+        </div> -->
 
           <div class="wrapper">
           </div>
