--- a/src/views/user/layouts/blog.ejs
+++ b/src/views/user/layouts/blog.ejs
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <meta name="title" content="Dialysing.com" />
+    <meta name="description" content=""/>
+
     <title>Dialysing.com</title>
 
     <!-- load stylesheets -->
