--- a/src/views/user/layouts/index.ejs
+++ b/src/views/user/layouts/index.ejs
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <meta name="description" content="<%- seoSettings.description %>">
+    <meta name="title" content="<%- seoSettings.title %>">
+
     <title>Dialysing.com</title>
 
     <!-- load stylesheets -->
