added and created charged invoices list page

--- a/src/views/admin/partials/aside.ejs
+++ b/src/views/admin/partials/aside.ejs
@@ -123,7 +123,7 @@
         <span class="side-menu__label">Kasa Yönetimi</span><i class="angle fa fa-angle-right"></i></a>
       <ul class="slide-menu">
         <li><a href="/admin/debtor-account" class="slide-item">Borçlular Hesabı</a></li>
-        <li><a href="/admin/charged" class="slide-item">Yapılmış Ödemeler</a></li>
+        <li><a href="/admin/invoice-list" class="slide-item">Yapılmış Ödemeler</a></li>
         <li><a href="/admin/center-spend" class="slide-item">Merkez Harcamaları</a></li>
         <li><a href="/admin/token-tracking" class="slide-item">Token Takibi</a></li>
       </ul>
