adding center invoices list

--- a/src/views/admin/partials/aside.ejs
+++ b/src/views/admin/partials/aside.ejs
@@ -122,10 +122,9 @@
         </svg>
         <span class="side-menu__label">Kasa Yönetimi</span><i class="angle fa fa-angle-right"></i></a>
       <ul class="slide-menu">
-        <li><a href="/admin/debtor-account" class="slide-item">Borçlular Hesabı</a></li>
+        <li><a href="/admin/debtor" class="slide-item">Borçlular Hesabı</a></li>
         <li><a href="/admin/invoice-list" class="slide-item">Yapılmış Ödemeler</a></li>
         <li><a href="/admin/center-spend" class="slide-item">Merkez Harcamaları</a></li>
-        <li><a href="/admin/token-tracking" class="slide-item">Token Takibi</a></li>
       </ul>
     </li>
     <!--====== SEO Management BAR ======-->
