--- a/src/views/admin/pages/premium-clinic.ejs
+++ b/src/views/admin/pages/premium-clinic.ejs
@@ -1,7 +1,7 @@
 <!--Page header-->
 <div class="page-header">
   <div class="page-leftheader">
-    <h4 class="page-title">Premium Üye Ekleme</h4>
+    <h4 class="page-title">Premium Üyelere Listele</h4>
   </div>
 </div>
 <!--End Page header-->
@@ -27,11 +27,7 @@
                         <a href="#" class="option-dots" data-toggle="dropdown" aria-haspopup="true"
                           aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
                         <div class="dropdown-menu">
-                          <a class="dropdown-item" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                              height="16" fill="currentColor" class="bi bi-star mx-2" viewBox="0 0 16 16">
-                              <path
-                                d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z" />
-                            </svg>Premium Üye Yap</a>
+                          <a class="dropdown-item" href="#"><i class="fe fe-trash mr-2"></i> Kaldır</a>
                         </div>
                       </div>
                     </div>
@@ -78,11 +74,7 @@
                         <a href="#" class="option-dots" data-toggle="dropdown" aria-haspopup="true"
                           aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
                         <div class="dropdown-menu">
-                          <a class="dropdown-item" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                              height="16" fill="currentColor" class="bi bi-star mx-2" viewBox="0 0 16 16">
-                              <path
-                                d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z" />
-                            </svg>Premium Üye Yap</a>
+                          <a class="dropdown-item" href="#"><i class="fe fe-trash mr-2"></i> Kaldır</a>
                         </div>
                       </div>
                     </div>
@@ -129,11 +121,7 @@
                         <a href="#" class="option-dots" data-toggle="dropdown" aria-haspopup="true"
                           aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
                         <div class="dropdown-menu">
-                          <a class="dropdown-item" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                              height="16" fill="currentColor" class="bi bi-star mx-2" viewBox="0 0 16 16">
-                              <path
-                                d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z" />
-                            </svg>Premium Üye Yap</a>
+                          <a class="dropdown-item" href="#"><i class="fe fe-trash mr-2"></i> Kaldır</a>
                         </div>
                       </div>
                     </div>
@@ -180,11 +168,7 @@
                         <a href="#" class="option-dots" data-toggle="dropdown" aria-haspopup="true"
                           aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
                         <div class="dropdown-menu">
-                          <a class="dropdown-item" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                              height="16" fill="currentColor" class="bi bi-star mx-2" viewBox="0 0 16 16">
-                              <path
-                                d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z" />
-                            </svg>Premium Üye Yap</a>
+                          <a class="dropdown-item" href="#"><i class="fe fe-trash mr-2"></i> Kaldır</a>
                         </div>
                       </div>
                     </div>
