--- a/src/views/admin/partials/aside.ejs
+++ b/src/views/admin/partials/aside.ejs
@@ -107,7 +107,7 @@
         <span class="side-menu__label">Klinik Yönetimi</span><i class="angle fa fa-angle-right"></i></a>
       <ul class="slide-menu">
         <li><a href="/admin/center-list" class="slide-item">Klinik Listele</a></li>
-        <li><a href="/admin/premium-center" class="slide-item">Premium Üye Ekleme</a></li>
+        <li><a href="/admin/premium-center" class="slide-item">Premium Üyeleri Listele</a></li>
       </ul>
     </li>
     <!--====== Kasa Management BAR ======-->
