added profile authentication

--- a/src/views/admin/partials/aside.ejs
+++ b/src/views/admin/partials/aside.ejs
@@ -176,8 +176,7 @@
         <li><a href="/admin/forgot-password" class="slide-item"> Şifremi Unuttum</a></li>
         <li><a href="/admin//reset-password" class="slide-item"> Parolayı Sıfırla</a></li>
         <li><a href="/admin/lock-screen" class="slide-item"> Anahtarlama Ekranı</a></li>
-        <li><a href="#" class="slide-item"> Kullanıcı Yetkilendirme</a></li>
-        <li><a href="#" class="slide-item"> Premium Üye Yetkilendirmesi</a></li>
+        <li><a href="/admin/profile-auth" class="slide-item"> Kullanıcı Yetkilendirme</a></li> 
         <li><a href="#" class="slide-item"> FAQ Yönetimi</a></li>
       </ul>
     </li>
