--- a/src/views/user/layouts/clinic-all-view.ejs
+++ b/src/views/user/layouts/clinic-all-view.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <meta name="description" content="<%- seoSettings.description %>">
-    <meta name="title" content="<%- seoSettings.title %>">
+    <meta name="title" content=" <%- city  %>  | <%- seoSettings.title %>">
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
