--- a/src/views/admin/pages/clinic-home-management.ejs
+++ b/src/views/admin/pages/clinic-home-management.ejs
@@ -13,12 +13,12 @@
         <h3 class="card-title">Seo Etiketlerini Değiştir</h3>
       </div>
       <div class="card-body">
-        <form action="/admin/add-blog" method="POST">
+        <form action="/admin/clinic-home-management" method="POST">
           <div class="form-group">
             <div class="row align-items-center">
               <label class="col-sm-2 form-label">Title Açıklama</label>
               <div class="col-sm-10">
-                <input type="text" name="title" class="form-control" />
+                <input type="text" name="title" value="<%- seoSettings.title || ""  %>" class="form-control" />
               </div>
             </div>
           </div> 
@@ -26,7 +26,7 @@
             <div class="row">
               <label class="col-sm-2 form-label">Meta Açıklama</label>
               <div class="col-sm-10">
-                <textarea rows="4" name="content" class="form-control"></textarea>
+                <textarea rows="4" name="description" class="form-control"><%- seoSettings.description || ""  %></textarea>
               </div>
             </div>
           </div>
