changing admin aside link

--- a/src/views/admin/layouts/index.ejs
+++ b/src/views/admin/layouts/index.ejs
@@ -128,9 +128,12 @@
       <script src="../admin/plugins/datatable/responsive.bootstrap4.min.js"></script>
       <script src="../admin/js/datatables.js"></script>
   
+		<!-- Accordion js-->
+		<script src="../admin/plugins/accordion/accordion.min.js"></script>
+		<script src="../admin/js/accordion.js"></script>
 
-  <!-- Custom js-->
-  <script src="../admin/js/custom.js"></script>
+		<!-- Custom js-->
+		<script src="../admin/js/custom.js"></script>
 </body>
 
 </html>
